testing the HS fireplace for llm inputs

--- a/data_gathering.ipynb
+++ b/data_gathering.ipynb
@@ -461,207 +461,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#view the XML files in hs-data\n",
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
+    "tree = ET.parse(\"./hsdata/CardDefs.xml\")\n",
+    "root = tree.getroot()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#all?\n",
+    "entity_list=[]\n",
+    "for child in root:\n",
+    "    #print(child.tag, child.attrib)\n",
+    "    entity_list.append(child.attrib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Card Play - Card ID: CORE_BT_117\n",
-      "Card Play - Card ID: CORE_CFM_790\n",
-      "Card Play - Card ID: CORE_CFM_790\n",
-      "Card Play - Card ID: CORE_EX1_383\n",
-      "Card Play - Card ID: CORE_RLK_741\n",
-      "Card Play - Card ID: CS2_108\n",
-      "Card Play - Card ID: ETC_113\n",
-      "Card Play - Card ID: ETC_113\n",
-      "Card Play - Card ID: ETC_526\n",
-      "Card Play - Card ID: EX1_407\n",
-      "Card Play - Card ID: EX1_606\n",
-      "Card Play - Card ID: HERO_01\n",
-      "Card Play - Card ID: HERO_01ao_Annhylde_hls\n",
-      "Card Play - Card ID: HERO_01bp\n",
-      "Card Play - Card ID: HERO_01dbp\n",
-      "Card Play - Card ID: REV_COIN2\n",
-      "Card Play - Card ID: REV_COIN2\n",
-      "Card Play - Card ID: REV_COIN2\n",
-      "Card Play - Card ID: REV_COIN2\n",
-      "Card Play - Card ID: TOY_330t5\n",
-      "Card Play - Card ID: TOY_330t5\n",
-      "Card Play - Card ID: TOY_607\n",
-      "Card Play - Card ID: TOY_907\n",
-      "Card Play - Card ID: TOY_907\n",
-      "Card Play - Card ID: TTN_060t\n",
-      "Card Play - Card ID: TTN_060t1\n",
-      "Card Play - Card ID: TTN_060t10t1\n",
-      "Card Play - Card ID: TTN_060t2\n",
-      "Card Play - Card ID: TTN_060t2\n",
-      "Card Play - Card ID: TTN_060t2\n",
-      "Card Play - Card ID: TTN_060t3\n",
-      "Card Play - Card ID: TTN_060t4\n",
-      "Card Play - Card ID: TTN_060t5\n",
-      "Card Play - Card ID: TTN_060t7t1\n",
-      "Card Play - Card ID: TTN_060t8t1\n",
-      "Card Play - Card ID: TTN_751\n",
-      "Card Play - Card ID: TTN_753t\n",
-      "Card Play - Card ID: WW_001t16\n",
-      "Card Play - Card ID: WW_001t18\n",
-      "Card Play - Card ID: WW_001t18\n",
-      "Card Play - Card ID: WW_372\n",
-      "Card Play - Card ID: WW_379\n",
-      "Card Play - Card ID: WW_440\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 0\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 0\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 0\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 0\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 3\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 3\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 8\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 8\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 9\n",
-      "Damage - Entity: 2단 합체 질리악스 3000, Damage: 9\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 14\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 14\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 16\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 16\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 17\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 17\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 20\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 20\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 25\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 25\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 3\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 3\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 4\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 4\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 7\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 7\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 9\n",
-      "Damage - Entity: 가로쉬 헬스크림, Damage: 9\n",
-      "Damage - Entity: 가시바위 토템, Damage: 0\n",
-      "Damage - Entity: 가시바위 토템, Damage: 0\n",
-      "Damage - Entity: 가시바위 토템, Damage: 1\n",
-      "Damage - Entity: 가시바위 토템, Damage: 1\n",
-      "Damage - Entity: 가시바위 토템, Damage: 2\n",
-      "Damage - Entity: 가시바위 토템, Damage: 2\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 0\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 0\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 0\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 0\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 5\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 5\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 5\n",
-      "Damage - Entity: 거품 무는 광전사, Damage: 5\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 0\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 0\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 1\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 1\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 2\n",
-      "Damage - Entity: 고통의 수행사제, Damage: 2\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 0\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 0\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 2\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 2\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 6\n",
-      "Damage - Entity: 그롬마쉬 헬스크림, Damage: 6\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 0\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 0\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 1\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 1\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 2\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 2\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 4\n",
-      "Damage - Entity: 단단한 딱정벌레, Damage: 4\n",
-      "Damage - Entity: 돌가죽 방어구 제작자, Damage: 0\n",
-      "Damage - Entity: 돌가죽 방어구 제작자, Damage: 0\n",
-      "Damage - Entity: 돌가죽 방어구 제작자, Damage: 3\n",
-      "Damage - Entity: 돌가죽 방어구 제작자, Damage: 3\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 1\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 1\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 2\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 2\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 3\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 3\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 4\n",
-      "Damage - Entity: 룬 거대철퇴, Damage: 4\n",
-      "Damage - Entity: 밴드 매니저 정예 타우렌 족장, Damage: 0\n",
-      "Damage - Entity: 밴드 매니저 정예 타우렌 족장, Damage: 0\n",
-      "Damage - Entity: 밴드 매니저 정예 타우렌 족장, Damage: 5\n",
-      "Damage - Entity: 밴드 매니저 정예 타우렌 족장, Damage: 5\n",
-      "Damage - Entity: 비겁한 밀고자, Damage: 0\n",
-      "Damage - Entity: 비겁한 밀고자, Damage: 0\n",
-      "Damage - Entity: 비겁한 밀고자, Damage: 2\n",
-      "Damage - Entity: 비겁한 밀고자, Damage: 2\n",
-      "Damage - Entity: 사진사 피즐, Damage: 0\n",
-      "Damage - Entity: 사진사 피즐, Damage: 0\n",
-      "Damage - Entity: 사진사 피즐, Damage: 3\n",
-      "Damage - Entity: 사진사 피즐, Damage: 3\n",
-      "Damage - Entity: 살아있는 돌, Damage: 0\n",
-      "Damage - Entity: 살아있는 돌, Damage: 0\n",
-      "Damage - Entity: 살아있는 돌, Damage: 4\n",
-      "Damage - Entity: 살아있는 돌, Damage: 4\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 0\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 0\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 1\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 1\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 2\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 2\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 4\n",
-      "Damage - Entity: 욕심쟁이 친구, Damage: 4\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 0\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 0\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 1\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 1\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 1\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 1\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 2\n",
-      "Damage - Entity: 이글거리는 전쟁 도끼, Damage: 2\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 0\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 0\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 0\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 0\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 4\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 4\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 4\n",
-      "Damage - Entity: 잠꾸러기 용, Damage: 4\n",
-      "Damage - Entity: 장인의 망치, Damage: 0\n",
-      "Damage - Entity: 장인의 망치, Damage: 0\n",
-      "Damage - Entity: 장인의 망치, Damage: 1\n",
-      "Damage - Entity: 장인의 망치, Damage: 1\n",
-      "Damage - Entity: 장인의 망치, Damage: 2\n",
-      "Damage - Entity: 장인의 망치, Damage: 2\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 0\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 0\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 1\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 1\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 2\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 2\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 3\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 3\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 4\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 4\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 5\n",
-      "Damage - Entity: 잿멍울 괴물, Damage: 5\n",
-      "Damage - Entity: 플린트 파이어암, Damage: 0\n",
-      "Damage - Entity: 플린트 파이어암, Damage: 0\n",
-      "Damage - Entity: 플린트 파이어암, Damage: 2\n",
-      "Damage - Entity: 플린트 파이어암, Damage: 2\n"
+      "29830\n"
      ]
     }
    ],
    "source": [
-    "power_log_path=os.path.join(log_path, \"Power.log\")\n",
-    "zone_log_path=os.path.join(log_path, \"Zone.log\")\n",
-    "\n",
-    "power_events = parse_power_log(power_log_path)\n",
-    "zone_events = parse_zone_log(zone_log_path)\n",
-    "\n",
-    "all_events = power_events + zone_events\n",
-    "all_events.sort()  # Sort events if needed based on time (this is basic, further refinement may be required)\n",
-    "\n",
-    "for event in all_events:\n",
-    "    print(event)"
+    "#total of 29.8k items -> including the cards, heros...etc\n",
+    "print(len(entity_list))"
    ]
   },
   {
